--- a/Bank-app/src/css/MyStyle.css
+++ b/Bank-app/src/css/MyStyle.css
@@ -22,3 +22,29 @@
       margin: 0 auto;
       background-color: #01579b;
   }
+
+  .modal_m{
+    position: fixed;
+    color: white;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 999;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding-top: 20%;
+}
+
+.modal_content_m{
+    color: white;
+    border: 1px solid;
+    width: 40%;
+    background-color: #01579b;
+    margin: 0 auto;
+    border-radius: 2em;
+}
+
+  .btn-modal_m{
+      color: white;
+  }
